src/avm2/tests/regress/correctness/pass/method-closures-2.as
package {
  class A {
    function foo() {

    }
  }
  var a = new A();
  trace(a.foo === a.foo);
  trace(a.foo === a.foo);
  trace(a.foo === a.foo);
  trace("-- DONE --");
}